# chatbot-planetas-deploy

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
dados/: dados.py  planetas.xlsx  sistema_solar.py  ~$planetas.xlsx
templates/: index.html
